[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LevelEndPopup.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="WinDialog" type="PopupDialog" parent="."]
margin_right = 585.0
margin_bottom = 585.0

[node name="HBoxContainer" type="HBoxContainer" parent="WinDialog"]
margin_right = 585.0
margin_bottom = 585.0

[node name="Control3" type="Control" parent="WinDialog/HBoxContainer"]
margin_right = 188.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WinDialog/HBoxContainer"]
margin_left = 192.0
margin_top = 150.0
margin_right = 392.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 43.0
text = "You Win"
align = 1

[node name="NextLevelButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 200.0
margin_bottom = 96.0
text = "Next Level"

[node name="RestartButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 149.0
text = "Restart"

[node name="MenuButton" type="Button" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 200.0
margin_bottom = 202.0
text = "Menu"

[node name="Control6" type="Control" parent="WinDialog/HBoxContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 200.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="WinDialog/HBoxContainer"]
margin_left = 396.0
margin_right = 585.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoseDialog" type="PopupDialog" parent="."]
margin_right = 585.0
margin_bottom = 585.0

[node name="HBoxContainer" type="HBoxContainer" parent="LoseDialog"]
margin_right = 585.0
margin_bottom = 585.0

[node name="Control3" type="Control" parent="LoseDialog/HBoxContainer"]
margin_right = 158.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="LoseDialog/HBoxContainer"]
margin_left = 162.0
margin_top = 150.0
margin_right = 422.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 43.0
text = "You Lose!"
align = 1

[node name="RestartButton" type="Button" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 260.0
margin_bottom = 96.0
text = "Restart"

[node name="MenuButton" type="Button" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 260.0
margin_bottom = 149.0
text = "Menu"

[node name="Control6" type="Control" parent="LoseDialog/HBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 260.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="LoseDialog/HBoxContainer"]
margin_left = 426.0
margin_right = 585.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="popup_hide" from="WinDialog" to="." method="_on_WinDialog_popup_hide"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="WinDialog/HBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="popup_hide" from="LoseDialog" to="." method="_on_LoseDialog_popup_hide"]
[connection signal="pressed" from="LoseDialog/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LoseDialog/HBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
